--- a/Docs/Tesi/lista_business.tex
+++ b/Docs/Tesi/lista_business.tex
@@ -1,4 +1,4 @@
-\subsection{Pager e Criteria API}
+\paragraph{Pager e Criteria API}
 
 La classe che si occupa del recupero delle informazioni dal database è \texttt{ContractSearchService}. Lo scopo di questa classe è effettuare un ricerca paginata sul database secondo vari criteri di ricerca quali 
 responsabile scientifico, data, dittà etc. Il codice che si occupa della paginazione è stato incapsulato nella classe \texttt{ResultPager}. \texttt{ResultPager} viene costruito
