--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -56,7 +56,7 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \chapter{Tecnologie}
 \section{JPA}
 \input{jpa}
-\section{CDI}
+\section{CDI} 
 \label{cdi}
 \input{CDI}
 \section{JSF}
@@ -72,6 +72,7 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \section{Lista convenzioni}
 \input{lista_interfaccia}
 \input{lista_business}
+\section{Filler Vari ed Eventuali}
 
 
 
