--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -34,7 +34,11 @@
 % Title Page
 \title{Analisi e sviluppo di una web application \\
 basata sui framework JPA, JSF, CDI, \\
-per l'amministrazione di attività di trasferimento tecnologico}
+per l'amministrazione di attività di trasferimento tecnologico\\\vspace{5cm}
+Analysis and development of a web application \\
+based on the JPA, JSF, and CDI frameworks \\
+for administration of technology transfer activities
+}
 \author{Tommaso Levato, Alessio Sarullo, Giulio Galvan}
 
 
@@ -72,6 +76,9 @@ per l'amministrazione di attività di trasferimento tecnologico}
 \section{Lista convenzioni}
 \input{lista_interfaccia}
 \input{lista_business}
+\section{Creazione Entità}
+\input{creazione_interfaccia}
+\input{creazione_business}
 \section{Filler Vari ed Eventuali}
 
 
