Role: chief_scientist > professor

--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -160,6 +160,9 @@ err_invalidEmail=Indirizzo email non valido
 err_generic=E' avvenuto un errore
 err_sendingMail=E' avvenuto un errore durante l'invio dell' email di notifica
 
+info_badLogin=Matricola o password errati
+info_badLogin_detail=Matricola o password errati: inserire i valori corretti
+
 invalidFileSize=Dimensione del file non valida
 invalidFile=File non valido
 
