--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -59,6 +59,7 @@ for administration of technology transfer activities
 \input{casi_uso}
 \chapter{Tecnologie}
 \section{JPA}
+\label{jpa}
 \input{jpa}
 \section{CDI} 
 \label{cdi}
@@ -76,7 +77,7 @@ for administration of technology transfer activities
 \section{Lista convenzioni}
 \input{lista_interfaccia}
 \input{lista_business}
-\section{Creazione Entità}
+\section{Creazione e Modifica di Entità}
 \input{creazione_interfaccia}
 \input{creazione_business}
 \section{Filler Vari ed Eventuali}
