--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -91,13 +91,18 @@ for administration of technology transfer activities
 \label{cdi}
 \input{CDI}
 \section{JSF}
+\label{jsf}
 \input{JSF}
 \section{Deltaspike}
+\label{delta}
 \input{Deltaspike}
 \section{Altre librerie}
+\label{libs}
 \input{altre_librerie}
 \chapter{Utilizzo}
+\label{howto}
 \chapter{Dietro le quinte}
+\label{code}
 \section{Login}
 \input{login}
 \section{Lista convenzioni}
@@ -106,7 +111,7 @@ for administration of technology transfer activities
 \section{Creazione e Modifica di Entità}
 \input{creazione_interfaccia}
 \input{creazione_business}
-\section{Filler Vari ed Eventuali}
+\section{Strategie per il calcolo delle aliquote}
 \input{filler}
 
 
