--- a/Docs/Tesi/filler.tex
+++ b/Docs/Tesi/filler.tex
@@ -5,7 +5,7 @@ Il meccanismo in base al quale calcolare le quote \textquoteleft derivate\textqu
 
 \begin{figure}
 \centering
-\includegraphics{strategy.jpg}
+\includegraphics{strategy.eps}
 \caption{Il pattern Strategy}
 \label{strategy}
 \end{figure}
