--- a/Docs/Tesi/filler.tex
+++ b/Docs/Tesi/filler.tex
@@ -5,7 +5,7 @@ Il meccanismo in base al quale calcolare le quote \textquoteleft derivate\textqu
 
 \begin{figure}
 \centering
-\includegraphics{strategy.eps}
+\includegraphics[width=0.25\textwidth]{strategy.eps}
 \caption{Il pattern Strategy}
 \label{strategy}
 \end{figure}
@@ -22,7 +22,7 @@ Le percentuali sulla base delle quali eseguire il calcolo sono definibili attrav
 
 \begin{figure}
 \centering
-\includegraphics{filler_strategy.eps}
+\includegraphics[width=0.25\textwidth]{filler_strategy.eps}
 \caption{Il pattern Strategy applicato ai filler}
 \label{filler_strategy}
 \end{figure}
@@ -37,7 +37,7 @@ In figura \ref{filler_complete} è mostrato lo schema completo.
 
 \begin{figure}
 \centering
-\includegraphics{filler_complete.eps}
+\includegraphics[width=0.25\textwidth]{filler_complete.eps}
 \caption{Il pattern Strategy applicato ai filler}
 \label{filler_complete}
 \end{figure}
