--- a/Docs/Tesi/filler.tex
+++ b/Docs/Tesi/filler.tex
@@ -3,9 +3,9 @@ Il meccanismo in base al quale calcolare le quote \textquoteleft derivate\textqu
 
 \subsubsection{Il pattern \textsl{Strategy}}
 
-\begin{figure}
+\begin{figure}[h]
 \centering
-\includegraphics[width=0.25\textwidth]{strategy.eps}
+\includegraphics[width=0.6\textwidth]{strategy.eps}
 \caption{Il pattern Strategy}
 \label{strategy}
 \end{figure}
@@ -20,7 +20,7 @@ La classe che rappresenta genericamente l'algoritmo è chiamata \lstinline{Contr
 Attualmente, è prevista un'unica implementazione del filler, chiamata \lstinline{StandardContractShareTableFiller} (o \textsl{filler standard}). Questa implementazione prevede tutti gli altri attributi della tabella di ripartizione vengano calcolati sulla base della quota relativa al personale. In figura \ref{filler_strategy} è mostrato il pattern Strategy applicato al caso concreto.\\
 Le percentuali sulla base delle quali eseguire il calcolo sono definibili attraverso gli opportuni file di configurazione, che si trovano all'interno della sotto-cartella \path{aliquoteDipartimenti} della cartella di configurazione (path relativo alla directory di jBoss: \path{standalone/deployments/Jama.war/WEB-INF/classes/config}). \\
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[width=0.25\textwidth]{filler_strategy.eps}
 \caption{Il pattern Strategy applicato ai filler}
@@ -35,9 +35,9 @@ Chiaramente, anche per la factory è necessario stabilire quale implementazione 
 Le cose sono in realtà leggermente più complicate di così. Infatti, bisogna tener conto che le variazione delle quote o del metodo di calcolo stesso non devono essere retroattive. Ad esempio, se nel 2013 al Fondo Comune di Ateneo spetta il 2.5\% del totale della convenzione, mentre nel 2014 l'1\% sulla quota relativa al personale, le convenzioni stipulate nel 2013 dovranno mantenere la quota precedente (2.5\% sul totale), che siano ancora attive nel 2014 o che non lo siano. Da ciò nasce l'esigenza di aggiungere nel contratto un attributo che rappresenta il filler utilizzato e di salvare questa informazione nel database; inoltre, è necessario anche poter effettuare query sul filler stesso. Per questi motivi, nell'implementazione del pattern Strategy si è deciso di utilizzare una classe astratta invece di un'interfaccia.\\
 In figura \ref{filler_complete} è mostrato lo schema completo.
 
-\begin{figure}
+\begin{figure}[h]
 \centering
-\includegraphics[width=0.25\textwidth]{filler_complete.eps}
-\caption{Il pattern Strategy applicato ai filler}
+\includegraphics[width=0.6\textwidth]{filler_complete.eps}
+\caption{Schema completo}
 \label{filler_complete}
 \end{figure}
