--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -77,6 +77,7 @@ for administration of technology transfer activities
 \tableofcontents
 
 \chapter{Introduzione}
+\input{Introduzione}
 \chapter{Analisi}
 \section{Modello}
 \input{modello_business}
