--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -85,6 +85,7 @@ for administration of technology transfer activities
 \section{Casi d'uso}
 \input{casi_uso}
 \chapter{Tecnologie}
+\label{chapter:Tecnologie}
 \section{JPA}
 \label{jpa}
 \input{jpa}
