--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -113,6 +113,8 @@ for administration of technology transfer activities
 \input{creazione_business}
 \section{Strategie per il calcolo delle aliquote}
 \input{filler}
+\section{Tempo e task periodici}
+\input{scheduler}
 
 
 
