--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -85,6 +85,9 @@ for administration of technology transfer activities
 \section{Casi d'uso}
 \input{casi_uso}
 \chapter{Tecnologie}
+L'applicativo sviluppato si basa sulla piattaforma \textsl{Java EE}, in particolare sfrutta i moduli \textsl{JPA} per la persistenza e \textsl{CDI} per la gestione del ciclo di vita dei bean e per l'iniezione di dipendenza. L'interfaccia grafica
+invece è stata scritta usando il framework \textsl{JSF} mentre per quanto riguarda la sicurezza si è utilizzato \textsl{DeltaSpike}. Come application server è invece stato scelto \textsl{JBoss AS 7}. Di seguito una descrizione di ciascuno
+di questi framework e, infine, di altre librerie usate per particolari contesti.
 \label{chapter:Tecnologie}
 \section{JPA}
 \label{jpa}
