--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -99,6 +99,7 @@ for administration of technology transfer activities
 \section{Altre librerie}
 \label{libs}
 \input{altre_librerie}
+\input{freemarker}
 \chapter{Utilizzo}
 \label{howto}
 \chapter{Dietro le quinte}
