--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -111,6 +111,8 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \label{code}
 \section{Login}
 \input{login}
+\section{Recupero degli Utenti}
+\input{recupero_utenti}
 \section{Lista convenzioni}
 \input{lista_interfaccia}
 \input{lista_business}
