--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -109,6 +109,7 @@ di questi framework e, infine, di altre librerie usate per particolari contesti.
 \label{freemarker}
 \input{freemarker}
 \chapter{Utilizzo}
+\input{utilizzo}
 \label{howto}
 \chapter{Dietro le quinte}
 \label{code}
